# earshot

./: Cargo.toml  LICENSE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: test.yml
benches/: vad.rs
examples/: extract-voice.rs
src/: default_predictor.rs  filters.rs  lib.rs  quantized_predictor.rs  util.rs
src/fft/: mod.rs  tables.rs
