[package]
name = "earshot"
version = "1.0.0"
description = "Ridiculously fast & accurate voice activity detection in pure Rust"
repository = "https://github.com/pykeio/earshot"
authors = [ "Carson M <carson@pyke.io>" ]
license = "MIT OR Apache-2.0"
edition = "2024"
exclude = ["tests/data", "benches/", "examples/", ".github"]
rust-version = "1.87"

[features]
default = [ "std" ]
# Currently just impls `std::error::Error` for the `Error` type.
std = []

[dependencies]
libm = "0.2"

[dev-dependencies]
criterion = "0.7"

[[bench]]
name = "vad"
harness = false
